--- a/src/pages/bookings/booking-list/booking-list.page.scss
+++ b/src/pages/bookings/booking-list/booking-list.page.scss
@@ -1,3 +1,19 @@
 page-booking-list {
 
+    .list-avatar-page {
+        ion-note {
+          font-size: 12px;
+          align-self: flex-start;
+          margin-top: 14px;
+        }        
+      }
+    .bookingTimeNote {
+        ion-note {
+            font-size: 12px;
+            align-self: flex-start;
+            margin-top: 18px;
+        }
+    }
 }
+
+
